force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <displayFormat>Alert-{000000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>