force-app/main/default/objects/Alert__c/fields/Acknowledged_by__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acknowledged by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alert (Acknowledged by)</relationshipLabel>
    <relationshipName>AlertAcknowledgedBy</relationshipName>
    <type>Lookup</type>
</CustomField>