force-app/main/default/objects/Alert__c/fields/Acknowledged_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Timestamp__c</fullName>
    <label>Acknowledged Timestamp</label>
    <type>DateTime</type>
</CustomField>