force-app/main/default/objects/Alert__c/fields/Benefit_Case__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Alert</relationshipLabel>
    <relationshipName>Alert</relationshipName>
    <type>Lookup</type>
</CustomField>