force-app/main/default/objects/Alert__c/fields/Related_to__c.field-meta.xml
<CustomField>
    <fullName>Related_to__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alert</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>